noinst_LIBRARIES = libxarchiver.a

libxarchiver_a_SOURCES = \
	libxarchiver.c libxarchiver.h \
	internals.c internals.h \
	archive-tar.c archive-tar.h \
	archive-rar.c archive-rar.h \
	archive-gzip.c archive-gzip.h \
	archive-bzip2.c archive-bzip2.h \
	archive-zip.c archive-zip.h \
	archive-7zip.c archive-7zip.h \
	archive-arj.c archive-arj.h \
	archive-iso.c archive-iso.h \
	\
	support.h \
	support-tar.c support-tar.h \
	support-bzip2.c support-bzip2.h \
	support-gzip.c support-gzip.h \
	support-rar.c support-rar.h \
	support-arj.c support-arj.h \
	support-zip.c support-zip.h \
	support-7zip.c support-7zip.h \
	support-iso.c support-iso.h

libxarchiver_a_CFLAGS = \
	@GLIB_CFLAGS@

libxarchiver_a_LIBADD =

libxarchiver_includedir= \
	$(includedir)/libxarchiver
