noinst_LTLIBRARIES = libxdgmime.la

libxdgmime_la_SOURCES = \
	xdgmime.c \
	xdgmime.h \
	xdgmimealias.c \
	xdgmimealias.h \
	xdgmimecache.c \
	xdgmimecache.h \
	xdgmimeglob.c \
	xdgmimeglob.h \
	xdgmimeicon.c \
	xdgmimeicon.h \
	xdgmimeint.c \
	xdgmimeint.h \
	xdgmimemagic.c \
	xdgmimemagic.h \
	xdgmimeparent.c \
	xdgmimeparent.h
